################################################################################
## playground/boost_test/MakeLists.txt
################################################################################

################################################################################
# Boost.Test scratchpad projects
################################################################################

project(bt_playground)


add_executable(bt_dataset                       EXCLUDE_FROM_ALL bt_dataset.cpp)
